# az-partner-center-cli

./: .gitignore  .pylintrc  .templateversionrc  MANIFEST.in  Partner_Ingestion_SwaggerDocument.json  README.md  READMEv2.md  listing_config_v2.json  manifest.yml  pyproject.toml  requirements.test.txt  requirements.txt  schema_config.json  schema_listing_config.json  schema_manifest.json  setup.py  template.config.json  template.config.yml  template.listing_config.json  template.manifest.json  template.manifest.yml  tox.ini  ws_mgdapp.code-workspace
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: auto-black.yml  auto-version.yml  black.yml  codeql.yml  main.yml  mypy.yml  on-pr.yml  on-push-create-release.yml  pylint.yml  pypi-publish.yml  pypi-test-publish.yml  pyright.yml  pytest.yml  release.yml  semantic-pr-check.yml  template-sync.yml
.pipelines/: marketplace_publish.yml
azure/: __init__.py  __main__.py  azpc_app.py
azureiai/: __init__.py  __main__.py  ama_app.py  azpc_app.py
customSwagger/: model.mustache
sample_app/: listing_config.json  ma_config.json  mainTemplate.json  preview_customers.csv  sample_app_listing_config.json  st_config.json  vm_config.json  vm_listing_config.json
tests/: __init__.py  cli_groups_tests.py  cli_tests.py  conftest.py  test_ama.py  test_ama_mock.py  test_cli.py  test_cli_group_co.py  test_cli_group_ma.py  test_cli_group_st.py  test_cli_group_vm.py  test_cli_groups_mock.py  test_cli_mock.py  test_configuration.py  test_swagger_generate.py
(+134 files in other folders)
