[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "az"
authors = [{name = "Dan Ciborowski", email = "dciborow@microsoft.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/microsoft/az-partner-center-cli"

[tool.black]
line-length = 120
fast = true
